<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moodleTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        style="@android:style/Widget.Holo.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logoInacap"
                    android:layout_width="180dp"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo_inacap" />

                <TextView
                    android:id="@+id/moodleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:paddingTop="20dp"
                    android:text="@string/moodleTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="31sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bodyLayout"
                android:layout_width="match_parent"
                android:layout_height="484dp"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/topLayout"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/selectorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingHorizontal="15dp"
                    android:text="@string/selectorTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_conversion_absoluteHeight="33dp"
                    tools:layout_conversion_absoluteWidth="411dp"
                    tools:layout_editor_absoluteX="5dp"
                    tools:layout_editor_absoluteY="85dp" />

                <Spinner
                    android:id="@+id/laboratory"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/laboratoriesEntries"
                    android:minHeight="48dp"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="10dp"
                    android:spinnerMode="dropdown"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/rut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_rut"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="20dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColorHint="@color/hint_color"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="20dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColorHint="@color/hint_color"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/incidenceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/incidence"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_conversion_absoluteHeight="33dp"
                    tools:layout_conversion_absoluteWidth="411dp" />

                <EditText
                    android:id="@+id/incidenceBody"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="119dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/incidenceBody"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="150dp"
                    android:textColorHint="@color/hint_color"
                    tools:ignore="VisualLintTextFieldSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    android:paddingTop="0dp">

                    <Button
                        android:id="@+id/btnExit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/design_default_color_error"
                        android:paddingLeft="48dp"
                        android:paddingRight="48dp"
                        android:text="@string/btnExit" />


                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="InefficientWeight" />

                    <Button
                        android:id="@+id/btn_enviar"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#4CAF50"
                        android:paddingLeft="48dp"
                        android:paddingRight="48dp"
                        android:text="@string/btnSend"
                        tools:ignore="TextContrastCheck" />


                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnListarIncidencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Listar Incidencias" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>