<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moodleTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        style="@android:style/Widget.Holo.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logoInacap"
                    android:layout_width="180dp"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo_inacap" />

                <TextView
                    android:id="@+id/moodleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:paddingTop="20dp"
                    android:text="@string/moodleTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="31sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bodyLayout"
                android:layout_width="match_parent"
                android:layout_height="572dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/topLayout"
                tools:ignore="MissingConstraints">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/dateLabel"
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:text="@string/dateTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="actualDate"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hour"
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:text="@string/hourTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="actualDate"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/correcto" />
                <TextView
                    android:id="@+id/incidenceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingTop="20dp"
                    android:text="@string/envioIncidencia"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_conversion_absoluteHeight="33dp"
                    tools:layout_conversion_absoluteWidth="411dp" />

                <Button
                    android:id="@+id/btnConfirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="105dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#4CAF50"
                    android:onClick="Cambio"
                    android:text="@string/btnVolver"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="105dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/design_default_color_error"
                    android:onClick="Cambio"
                    android:text="@string/btnFinalizar"
                    android:textAlignment="center" />

            </LinearLayout>

           </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>